5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1671_1103.log
== TEST (2019-04-29 13:03:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x = float(input())
a = float(input())
b = float(input())

if(a <= x and x <= b):
	print(x, "pertence ao intervalo", a, ", ", b)
elif(a >= x )
-- ERROR:
File "XXXX", line 11
    elif(a >= x )
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:06:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x = float(input())
a = float(input())
b = float(input())
if (b <= a):
	print("Entradas a e b invalidas")
elif(a <= x and x <= b):
	print(x, "pertence ao intervalo", a, ", ", b)
else:
-- ERROR:
File "XXXX", line 13
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:07:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x = float(input())
a = float(input())
b = float(input())
if (b <= a):
	print("Entradas a e b invalidas")
elif(a <= x and x <= b):
	print(x, "pertence ao intervalo", a, ", ", b)
else:
-- ERROR:
File "XXXX", line 13
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:07:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x = float(input())
a = float(input())
b = float(input())
if (b <= a):
	print("Entradas a e b invalidas")
elif(a <= x and x <= b):
	print(x, "pertence ao intervalo", a, ", ", b)
-- ERROR:
File "XXXX", line 13
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:07:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x = float(input())
a = float(input())
b = float(input())
if (b <= a):
	print("Entradas a e b invalidas")
elif(a <= x and x <= b):
	print(x, "pertence ao intervalo", a, ", ", b)
-- EXECUTION TIME:
0.225028
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 ,  22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:07:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x = float(input())
a = float(input())
b = float(input())
if (b <= a):
	print("Entradas a e b invalidas")
elif(a <= x and x <= b):
	print(x, "pertence ao intervalo", a, ", ", b)
-- ERROR:
File "XXXX", line 13
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:08:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x = float(input())
a = float(input())
b = float(input())
if (b <= a):
	print("Entradas a e b invalidas")
elif(a <= x and x <= b):
	print(x, "pertence ao intervalo", a, ", ", b)
-- ERROR:
File "XXXX", line 13
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:09:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x = float(input())
a = float(input())
b = float(input())
if (b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif(a <= x and x <= b):
	print(x, "pertence ao intervalo", a, ", ", b)
-- ERROR:
File "XXXX", line 13
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:10:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

x = float(input())
a = float(input())
b = float(input())
if (b <= a):
	print("Entradas", a, "e", b, "invalidas")
elif (a <= x and x <= b):
	print(x, "pertence ao intervalo", a, ", ", b)
else:
	print(x, "nao pertence ao intervalo", a, ", ", b)
-- EXECUTION TIME:
0.158399
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 ,  4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 ,  22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
